CMS collector is optional